[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/EnemySpawner.gd" type="Script" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://characters/enemies/DiverEnemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/enemies/ShootingEnemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/enemies/NormalEnemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://effects/Explosion.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/star_texture.png" type="Texture" id=9]
[ext_resource path="res://assets/bg_music.ogg" type="AudioStream" id=10]

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 1, 270, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -1000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 551.202, 111.466 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
autoplay = true

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )

[node name="Stars" type="Particles2D" parent="."]
position = Vector2( 270, 0 )
rotation = 4.71239
lifetime = 1.5
preprocess = 60.0
process_material = SubResource( 2 )
texture = ExtResource( 9 )

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 280, 850 )

[node name="EnemySpawner" type="Node2D" parent="."]
position = Vector2( 0, -100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
EnemyArray = [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ) ]

[node name="SpawnPositions" type="Node2D" parent="EnemySpawner"]

[node name="SpawnPos_01" type="Position2D" parent="EnemySpawner/SpawnPositions"]
position = Vector2( 70, 0 )

[node name="SpawnPos_02" type="Position2D" parent="EnemySpawner/SpawnPositions"]
position = Vector2( 170, 0 )

[node name="SpawnPos_03" type="Position2D" parent="EnemySpawner/SpawnPositions"]
position = Vector2( 270, 0 )

[node name="SpawnPos_04" type="Position2D" parent="EnemySpawner/SpawnPositions"]
position = Vector2( 370, 0 )

[node name="SpawnPos_05" type="Position2D" parent="EnemySpawner/SpawnPositions"]
position = Vector2( 470, 0 )

[node name="SpawnTimer" type="Timer" parent="EnemySpawner"]
wait_time = 1.5

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2( 278.274, 1167.8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
shape = SubResource( 1 )

[node name="DeathZone2" type="Area2D" parent="."]
position = Vector2( 278.274, -470.13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone2"]
shape = SubResource( 1 )

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="Effects" type="Node2D" parent="."]

[node name="Explosion" parent="Effects" instance=ExtResource( 8 )]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource( 7 )]
[connection signal="spawn_enemy" from="EnemySpawner" to="." method="_on_EnemySpawner_spawn_enemy"]
[connection signal="timeout" from="EnemySpawner/SpawnTimer" to="EnemySpawner" method="_on_SpawnTimer_timeout"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_DeathZone_area_entered"]
[connection signal="area_entered" from="DeathZone2" to="." method="_on_DeathZone_area_entered"]
